k8s_aws/calculator-demon-config.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-daemon-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator-daemon
  template:
    metadata:
      labels:
        app: calculator-daemon
    spec:
      containers:
      - name: calculator-daemon
        image: hedimiladi/calculator-daemon
        ports:
          - containerPort: 6000
