k8s_aws/api-config.yml
######################## FACTORIAL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorial-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factorial-api
  template:
    metadata:
      labels:
        app: factorial-api
    spec:
      containers:
        - name: factorial-api
          image: hedimiladi/calculator-factorial-api
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: factorial-api-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: factorial-api

  ######################## POWER
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: power-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: power-api
  template:
    metadata:
      labels:
        app: power-api
    spec:
      containers:
        - name: power-api
          image: hedimiladi/calculator-power-api
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: power-api-service
spec:
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001
  selector:
    app: power-api
