k8s_aws/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: web-service
              servicePort: 3000
          - path: /api/factorial/?(.*)
            backend:
              serviceName: factorial-api-service
              servicePort: 5000
          - path: /api/power/?(.*)
            backend:
              serviceName: power-api-service
              servicePort: 5001
